--- a/Bookstore/Bookstore/src/main/resources/templates/editbook.html
+++ b/Bookstore/Bookstore/src/main/resources/templates/editbook.html
@@ -5,9 +5,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-	<h1>Add new book</h1>
+	<h1>Edit book</h1>
 	<div>
-		<form th:object="${book}" th:action="@{save}" action="#" method="post">
+		<form th:object="${book}" th:action="@{../save}" action="#" method="post">
+			<label for="id"></label>>
+			<input type="hidden" id="id" th:field="*{id}" readonly="readonly" />
+			<div style="clear: both; display: block; height: 10px;"></div>
 
 		  	<label for="title">Title</label>
 			<input type="text" id="title" th:field="*{title}" />
