--- a/Bookstore/Bookstore/src/main/resources/templates/addbook.html
+++ b/Bookstore/Bookstore/src/main/resources/templates/addbook.html
@@ -29,6 +29,11 @@
 			<input type="text" id="price" th:field="*{price}" />
 			<div style="clear: both; display: block; height: 10px;"></div>
 			
+			<label for="categorylist">Category</label>
+			<select id="categorylist" th:field="*{category}" class="form-control"> <option th:each="category: ${categories}" th:value="${category.categoryId}"
+			 th:text="${category.name}"></option>
+			</select>
+			
 			<input type="submit" value="Save"></input>
 		</form>
 	</div>
