--- a/Bookstore/Bookstore/src/main/resources/templates/booklist.html
+++ b/Bookstore/Bookstore/src/main/resources/templates/booklist.html
@@ -6,6 +6,15 @@
 </head>
 <body>
 	<h1>Books</h1>
+	<div class="col-md-4">
+		<h3 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]</h3>
+	</div>
+	<div class="col-md-4" style="padding:20px 0">
+		<form th:action="@{/logout}" method="post">
+			<input type="submit" value="Sign Out" class="btn btn-sm btn-danger"/>
+		</form>
+	</div>
+	
     <table>
 		<tr>
 		    <th>Author</th>
@@ -14,6 +23,7 @@
 		    <th>Year</th>
 		    <th>Price</th>
 		    <th>Category</th>
+		    <th sec:authorize="hasRole('ADMIN')"> </th>
 		</tr>  
     	<tr th:each = "book : ${books}">
     		<td th:text="${book.author}"></td>
@@ -22,7 +32,7 @@
     		<td th:text="${book.year}"></td>
     		<td th:text="${book.price}"></td>
     		<td th:text="${book.category.name}"></td>
- 			<td><a th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
+ 			<td sec:authorize="hasRole('ADMIN')"><a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-xs btn-danger">Delete</a></td>
  			<td><a th:href="@{/edit/{id}(id=${book.id})}">Edit</a></td>
     	</tr>
      </table>
